--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "atatus-spa": "^4.4.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.3",
     "nprogress": "^0.2.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.12",
